# py-car

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml  requirements.txt  test.py  test2.py  test3.py
abstract/: file.py
car/: __init__.py  compressed_archive.py  file.py  utils.py
file_types/: __init__.py  binary_file.py
proto_files/: ipld_dag_pb2.py  unixfs_pb2.py
protobufs/: ipld_dag_pb2.py  unixfs.proto  unixfs_pb2.py
src/car/: utils.py
src/protobufs/: __init__.py
src/pycar/: __init__.py  test3.py
src/pycar/car/: compressed_archive.py  utils.py
src/pycar/file_types/: binary_file.py
src/pycar/utils/: __init__.py
tests/: test.py  test_file_writer.py  test_folder_writer.py  test_writer.py
tests/statics/: dummy
tests/statics/dummy_folder/sub1/: dummy1
tests/statics/dummy_folder/sub2/: dummy2
utils/: __init__.py  prepend.py
