[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=65.6", "wheel>=0.38"]

[project]
authors = [
    { name = "Ritesh Saha", email = "riteshsaha214@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Blockchain Enthuciasts",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.9",
    "Topic :: Merkle DAG",
]
dependencies = [
    "dag-cbor==0.3.3",
    "mypy==1.9.0",
    "multiformats==0.3.1.post4",
    "protobuf==3.20.1",
]
description = "Convert any file/folder into CARv1"
name = "pycar"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1"
    [project.urls]
    "Homepage" = "https://github.com/RiteshSaha8145/py-car/"

    [project.optional-dependencies]
    test = ["pytest-cases>=3.6", "pytest>=7.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pycar" = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
